--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ bower.json
 # Ignore node_modules
 node_modules/
 Gemfile.lock
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
